feat: create swaggo for login and register post
